<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="background"> #3B3B3B </color>

    <string name="app_name">GStock</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_title">Enter a company name..</string>
    <string name="action_settings"> Settings </string>
    <string name="SearchActivityName"> Results of search </string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_company_details">CompanyDetails</string>
    <string name="Price">Price</string>
    <string name="Change">Change</string>
    <string name="PrevClose">PrevClose</string>
    <string name="Time">Timestapm</string>
    <string name="Open">Open</string>
    <string name="High">High</string>
    <string name="Low">Low</string>
    <string name="title_activity_compare">Comparison</string>
    <string name="title_activity_favorite_view">FavoriteView</string>
    <string name="tab">\u0009</string>

</resources>