<!--
activity_company_details  
	 Made by: Joakim Bajoul Kakaei (881129-0298) 
	 Description: The detailed view's layout. 
	 Handles the complete layout by using a parent linearlayout as well as a 
	 relative layout as a child to cleanly format the textviews.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/thelayoutthatfuckedup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageButton
            android:id="@+id/add_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/Change"
            android:background="@null"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/selector_favs" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/Price"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/Price"
            android:text="@string/Change" />

        <TextView
            android:id="@+id/PrevClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Change"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-5dp"
            android:layout_toRightOf="@id/Price"
            android:text="@string/PrevClose" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/Price"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="-10dp"
            android:text="@string/Time" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/Open"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/High"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/High"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Low"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/Low"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:paddingTop="20dp"
        android:id="@+id/news_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />

</LinearLayout>